修复代码审查发现的问题
- removePlugin 卸载插件现在把插件物品返还给玩家，拒绝原因改为结构化 uninstallReason 字段

- setGunState 改为返回 MutationResult，不再抛 IllegalStateException

- getEffectiveValues 保留 attribute_meta 注册表顺序

- 修正 /onegun stat set 数值非法时误报属性未注册的提示，双语补充新文案

Co-authored-by: CommandCodeBot <noreply@commandcode.ai>